--- a/front_end/ui/legacy/inspectorCommon.css
+++ b/front_end/ui/legacy/inspectorCommon.css
@@ -305,6 +305,8 @@ input {
         width: 15px;
         border-radius: 5px;
         position: absolute;
+        top: 0;
+        left: 0;
         border: 2px solid var(--sys-color-state-focus-ring);
       }
     }
