[RPP] Allow using LitHtml.ResultTemplates for breakdown labels
The styling for breakdown labels vary between overlays. This makes them
customizable.

Bug:344550388
Change-Id: I651caf5f2c792ad93220d8b44b3ba3a2b841e64f
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5789948
Reviewed-by: Adam Raine <asraine@chromium.org>
Commit-Queue: Adriana Ixba <aixba@chromium.org>
Reviewed-by: Alina Varkki <alinavarkki@chromium.org>

--- a/front_end/panels/timeline/overlays/components/timespanBreakdownOverlay.css
+++ b/front_end/panels/timeline/overlays/components/timespanBreakdownOverlay.css
@@ -67,6 +67,10 @@
     display: block;
   }
 
+  .discovery-time-ms {
+    font-weight: var(--ref-typeface-weight-medium);
+  }
+
   &.labelHidden {
     /* Have to use this not display: none so it maintains its width */
     user-select: none;
