[Freestyler] Step redesign
This change provides each step with new looks,
while keeping re-rending from changing the state of
summary if user has changes it.

Bug: 358324719
Change-Id: Ib343b3791a8aa376fac20aea9efb2d60fcce3d80
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5797357
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -131,6 +131,21 @@
     justify-content: space-between;
     align-items: flex-end;
   }
+
+  .thought {
+    summary {
+      line-height: var(--sys-size-9);
+    }
+
+    devtools-icon {
+      vertical-align: bottom;
+      color: var(--sys-color-green-bright);
+    }
+
+    devtools-icon.loading {
+      color: var(--sys-color-blue-bright);
+    }
+  }
 }
 
 .input-header {
