[RPP] Display the Link annotation in the Sidebar and show annotated entries in the Sidebar in their FlameChart colors
To enable to easier identify the annotation, display annotated entries with the same background as they appear in the Flamechart.
To achieve this, build a map of entries -> colors that is passed to the Sidebar together with the list of annotations.

Also add the Entries Link annotation to the Sidebar.

Video: http://screencast/cast/NTY5MjQwNTk1MjAyMDQ4MHwyYzUzNzJmZS02Zg

Bug: 339802345
Change-Id: I0e523032262793b70c8d4d22acf20ef58594a28c
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5803647
Reviewed-by: Nancy Li <nancyly@chromium.org>
Commit-Queue: Alina Varkki <alinavarkki@chromium.org>

--- a/front_end/panels/timeline/components/sidebarAnnotationsTab.css
+++ b/front_end/panels/timeline/components/sidebarAnnotationsTab.css
@@ -41,19 +41,22 @@
   gap: 6px;
 }
 
-.entry-name {
+.annotation-identifier {
   padding: 4px 8px;
   border-radius: 10px;
   font-weight: bold;
-
-  &.entry-label {
-    background-color: var(--app-color-performance-sidebar-entry-label);
-  }
 
   &.time-range {
     background-color: var(--app-color-performance-sidebar-time-range);
     color: var(--app-color-performance-sidebar-time-range-text);
   }
+}
+
+.entries-link {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 2px;
+  align-items: center;
 }
 
 .label {
