[Freestyler] Add Assistant header
Bug: 358324719
Change-Id: I66307e422f09e30144377d3af1bb6f5f04881a52
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5788603
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -87,34 +87,41 @@
 .chat-message {
   user-select: text;
   cursor: initial;
+  display: flex;
+  flex-direction: column;
+  gap: var(--sys-size-5);
   width: 100%;
   padding: var(--sys-size-7) var(--sys-size-8);
   font-size: 12px;
   word-break: break-word;
   border-bottom: var(--sys-size-1) solid var(--sys-color-divider);
 
-  :not(:first-child) {
+  &:not(:first-child) {
     margin-top: var(--sys-size-5);
   }
 
-  &.query {
-    .account-info {
-      display: flex;
-      align-items: center;
-      gap: var(--sys-size-4);
-      padding-bottom: var(--sys-size-5);
+  &:last-child {
+    border-bottom: 0;
+  }
 
-      .account-email {
-        font-weight: bold;
-      }
+  .message-info {
+    display: flex;
+    align-items: center;
+    height: var(--sys-size-11);
+    gap: var(--sys-size-4);
+
+    .message-name {
+      font-weight: bold;
     }
+  }
 
+  &.query {
     img {
       border: 0;
       border-radius: var(--sys-shape-corner-full);
       display: block;
-      height: 32px;
-      width: 32px;
+      height: var(--sys-size-9);
+      width: var(--sys-size-9);
     }
   }
 
