Reduce focus ring for toolbar text buttons
Screenshot: imgur.com/a/PDYVain

Fixed: 361369303
Change-Id: I021d2e81424de0d5f426a0db117c94084c20d129
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5807577
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/ui/components/buttons/button.css
+++ b/front_end/ui/components/buttons/button.css
@@ -233,7 +233,8 @@ button {
     z-index: 1;
 
     &.toolbar,
-    &.icon {
+    &.icon,
+    &.reduced-focus-ring {
       outline-offset: -2px;
     }
   }
