[RPP Observations] Show info tooltip if interaction is larger than INP
INP looks at the 98th percentile of interaction delays, so some
interactions can have delays longer than INP. This behavior can be
confusing, so it is useful to explain it when it happens.

https://screenshot.googleplex.com/87CpkEWMaRcfA5a

Bug: 356563042
Change-Id: I39076c0a15f3ce23247649ffc7591023384c7350
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5809108
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>

--- a/front_end/panels/timeline/components/liveMetricsView.css
+++ b/front_end/panels/timeline/components/liveMetricsView.css
@@ -144,7 +144,6 @@
   padding: 7px 0;
   border: none;
   border-bottom: 1px solid var(--sys-color-divider);
-  gap: 32px;
 }
 
 .interaction:first-child {
@@ -155,11 +154,20 @@
   font-weight: var(--ref-typeface-weight-medium);
   width: 60px;
   flex-shrink: 0;
+  margin-right: 32px;
 }
 
 .interaction-node {
   overflow: hidden;
   flex-grow: 1;
+  margin-right: 32px;
+}
+
+.interaction-info {
+  width: var(--sys-typescale-body4-line-height);
+  height: var(--sys-typescale-body4-line-height);
+  cursor: help;
+  margin-right: 6px;
 }
 
 .interaction-duration {
