[RPP Observations] Add metric-specific environment recommendations
https://screenshot.googleplex.com/84Ai2nwoxQD2js4

This adds most of the "Type 2" info nuggets mentioned in:
http://go/cpq:rpp-metric-observations

Bug: 313906438
Change-Id: I2cee0b39c589157c3fed4f821d50b448db30ebb3
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5805744
Commit-Queue: Adam Raine <asraine@chromium.org>
Reviewed-by: Connor Clark <cjamcl@chromium.org>

--- a/front_end/panels/timeline/components/metricCard.css
+++ b/front_end/panels/timeline/components/metricCard.css
@@ -65,6 +65,15 @@
   margin-top: 8px;
 }
 
+.environment-recs-intro {
+  margin-top: 8px;
+}
+
+.environment-recs {
+  margin: 0;
+  padding-left: 20px;
+}
+
 .detailed-compare-text {
   margin-bottom: 8px;
 }
