[RPP Observations] Make environment recs collapsible
Bug: 313906438
Change-Id: Ie5b1b272c86c2f8a534aa16427ab234de25e1503
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5813790
Reviewed-by: Connor Clark <cjamcl@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>

--- a/front_end/panels/timeline/components/metricCard.css
+++ b/front_end/panels/timeline/components/metricCard.css
@@ -70,6 +70,15 @@
 }
 
 .environment-recs {
+  margin: 12px 0;
+}
+
+.environment-recs > summary {
+  font-weight: var(--ref-typeface-weight-medium);
+  margin-bottom: 4px;
+}
+
+.environment-recs-list {
   margin: 0;
   padding-left: 20px;
 }
