[Freestyler] Some UI changes
Also fixes the fallback for the user image.

Bug: 358324719
Change-Id: I2ddcf5c7b9695e1d52d5cc0e4729398f727e90f4
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5823393
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -79,7 +79,7 @@
 }
 
 .messages-container {
-  margin: var(--sys-size-6) auto 0 auto;
+  margin: 0 auto;
   max-width: var(--sys-size-36);
   padding: 0 var(--sys-size-4);
 }
@@ -91,14 +91,10 @@
   flex-direction: column;
   gap: var(--sys-size-5);
   width: 100%;
-  padding: var(--sys-size-7) var(--sys-size-8);
+  padding: var(--sys-size-7) var(--sys-size-5);
   font-size: 12px;
   word-break: break-word;
   border-bottom: var(--sys-size-1) solid var(--sys-color-divider);
-
-  &:not(:first-child) {
-    margin-top: var(--sys-size-5);
-  }
 
   &:last-child {
     border-bottom: 0;
@@ -109,13 +105,8 @@
     align-items: center;
     height: var(--sys-size-11);
     gap: var(--sys-size-4);
+    font: var(--sys-typescale-body4-bold);
 
-    .message-name {
-      font-weight: bold;
-    }
-  }
-
-  &.query {
     img {
       border: 0;
       border-radius: var(--sys-shape-corner-full);
@@ -131,20 +122,28 @@
     justify-content: space-between;
     align-items: flex-end;
   }
+}
 
-  .thought {
-    summary {
-      line-height: var(--sys-size-9);
-    }
+.step {
+  devtools-icon {
+    vertical-align: bottom;
+    color: var(--sys-color-green-bright);
 
-    devtools-icon {
-      vertical-align: bottom;
-      color: var(--sys-color-green-bright);
-    }
-
-    devtools-icon.loading {
+    &.loading {
       color: var(--sys-color-blue-bright);
     }
+
+    &.paused {
+      color: var(--sys-color-on-surface);
+    }
+  }
+
+  summary {
+    line-height: var(--sys-size-9);
+  }
+
+  .step-details {
+    padding-left: var(--sys-size-6);
   }
 }
 
