[Console Insights] Update disclaimer
Screenshots: https://imgur.com/a/D0F4my3
Design: https://docs.google.com/document/d/1iGtygMGqqCUtZsq4SOcOKGGThgthdwzaTy24NCUmLMk/edit?resourcekey=0-8_aOvxkpS_abnRmfg586bg&tab=t.0#bookmark=id.wepp39yz0udb

Bug: b/350668580
Change-Id: Icdc77cf91a0bda13d18a6671120d1fde9c6c13a5
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5823212
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/explain/components/consoleInsight.css
+++ b/front_end/panels/explain/components/consoleInsight.css
@@ -227,6 +227,13 @@ main .buttons {
   }
 }
 
+button.link {
+  border: none;
+  background: none;
+  cursor: pointer;
+  font: inherit;
+}
+
 .loader {
   background:
     linear-gradient(
