[RPP] Document latency sidebar insight
This covers a basic card: https://screenshot.googleplex.com/AZMtGLmUoACx4Qp. TODOs include surfacing the possible savings in failure cases, and an overlay.

Bug: 352244434
Change-Id: I45860885ac42da9ba3347ffbb3fe83cd94ce8c26
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5824828
Auto-Submit: Jasmine Yan <jasmineyan@google.com>
Reviewed-by: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Adriana Ixba <aixba@chromium.org>
Commit-Queue: Jasmine Yan <jasmineyan@google.com>

--- a/front_end/panels/timeline/components/insights/sidebarInsight.css
+++ b/front_end/panels/timeline/components/insights/sidebarInsight.css
@@ -137,3 +137,21 @@
 .insight-savings {
   font-weight: var(--ref-typeface-weight-bold);
 }
+
+ul.insight-icon-results {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+
+  li {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 4px;
+
+    span {
+      /* push the text down to align slightly better with the icons */
+      padding-top: 2px;
+    }
+  }
+}
