RPP: update outline for annotated entries
1. no rounded corners now
2. update the font + padding of the label to match Figma

Bug: 362680186
Change-Id: I85f81bdf7009cc1eb3c33873020d11b02b5ecf53
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5822713
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Alina Varkki <alinavarkki@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/overlays/components/entryLabelOverlay.css
+++ b/front_end/panels/timeline/overlays/components/entryLabelOverlay.css
@@ -19,10 +19,12 @@
 .label-box {
   pointer-events: auto;
   background-color: var(--sys-color-token-variable);
-  border-radius: 4px;
-  font-family: var(--monospace-font-family);
-  font-weight: bold;
+  border-radius: var(--sys-shape-corner-extra-small);
   white-space: nowrap;
+  padding: var(--sys-size-3) var(--sys-size-4);
+  font-family: var(--default-font-family);
+  font-size: var(--sys-typescale-body2-size);
+  font-weight: var(--ref-typeface-weight-medium);
 }
 
 .label-box:focus {
@@ -36,6 +38,5 @@
 
 .entry-highlight-wrapper {
   box-sizing: border-box;
-  border: 2px solid var(--sys-color-token-variable);
-  border-radius: 7px;
+  border: 2px solid var(--sys-color-on-surface);
 }
