[Freestyler] Update the Side-effect UI
Bug: 358324719
Change-Id: I38b259363b23385238ee2e67d19699af430cf842
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5822708
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -209,11 +209,6 @@
 }
 
 .side-effect-confirmation {
-  background: var(--color-background);
-  padding: 24px;
-  border-radius: var(--sys-size-6);
-  margin-bottom: 8px;
-
   p {
     margin: 0;
     margin-bottom: 12px;
@@ -222,11 +217,8 @@
 }
 
 .side-effect-buttons-container {
-  margin-top: 8px;
-
-  devtools-button {
-    margin-top: 4px;
-  }
+  display: flex;
+  gap: var(--sys-size-4);
 }
 
 .consent-view {
