[GM3Restyling] Introduce new css class for navigation trees
This adds a new css class for styling navigation trees as defined
in the CDT kit. It also updates the NavigatorView to use the new class.

Before: https://i.imgur.com/KHaFSRC.png
After: https://i.imgur.com/CLnODYR.png
Bug: 330214304
Change-Id: Ie96d90f3d799f5e4b2780e4614d568059632c759
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5769258
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/panels/sources/navigatorTree.css
+++ b/front_end/panels/sources/navigatorTree.css
@@ -27,24 +27,8 @@
  * THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-:host {
-  overflow-y: auto;
-}
-
-.icon,
-.icon-basic,
-.icon-badge {
-  margin: -3px -5px;
-}
-
-.navigator-fs-tree-item:not(.has-mapped-files):not(.selected) > :not(.selection),
-.navigator-fs-folder-tree-item:not(.has-mapped-files):not(.selected) > :not(.selection) {
-  filter: grayscale(50%);
-  opacity: 50%;
-}
-
 .is-ignore-listed {
-  opacity: 50%;
+  opacity: 40%;
 }
 
 .tree-outline li {
@@ -107,6 +91,16 @@
   color: var(--icon-folder-authored);
 }
 
+.navigator-fs-tree-item:not(.has-mapped-files):not(.selected) > :not(.selection),
+.navigator-fs-folder-tree-item:not(.has-mapped-files):not(.selected) > :not(.selection) {
+  color: var(--sys-color-on-surface-subtle);
+  opacity: 40%;
+
+  & devtools-icon {
+    color: var(--sys-color-on-surface-subtle);
+  }
+}
+
 .tree-outline:not(:has(.navigator-deployed-tree-item)) .navigator-sm-folder-tree-item .tree-element-title,
 .tree-outline:not(:has(.navigator-deployed-tree-item)) .navigator-sm-script-tree-item .tree-element-title,
 .tree-outline:not(:has(.navigator-deployed-tree-item)) .navigator-sm-stylesheet-tree-item .tree-element-title {
@@ -118,7 +112,8 @@
     color: ButtonText;
   }
 
-  .tree-outline li:hover:not(.selected) .selection {
+  .tree-outline li:hover:not(.selected) .selection,
+  .tree-outline li:hover:not(:has(span[is="dt-checkbox"])) .selection {
     forced-color-adjust: none;
     background-color: Highlight;
   }
