[GM3Restyling] Update Console sidebar
This updates the console sidebar to use the GM3 navigation tree style.

Drive-by: Fixing styles for .hide-selection-when-blurred in TreeOutline
Before: https://i.imgur.com/vm90q2q.png
After: https://i.imgur.com/iUioB1g.png
Bug: 5769258
Change-Id: Id4c39b35a42947ca9389c02333cd0f7ccf5ea090
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5830446
Reviewed-by: Changhao Han <changhaohan@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/panels/console/consoleSidebar.css
+++ b/front_end/panels/console/consoleSidebar.css
@@ -4,24 +4,12 @@
  * found in the LICENSE file.
  */
 
-:host {
-  overflow: auto;
-  background-color: var(--sys-color-cdt-base-container);
-}
-
-.tree-outline-disclosure {
-  max-width: 100%;
-  padding-left: 6px;
-}
-
 .count {
   flex: none;
-  margin: 0 8px;
+  margin: 0 var(--sys-size-3);
 }
 
 devtools-icon {
-  margin: 0 5px;
-
   &[name="cross-circle"] {
     color: var(--sys-color-error-bright);
   }
@@ -35,42 +23,6 @@ devtools-icon {
   }
 }
 
-li {
-  height: 24px;
-}
-
 .tree-element-title {
-  flex-shrink: 100;
   flex-grow: 1;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.tree-outline li:hover:not(.selected) .selection {
-  display: block;
-  background-color: var(--sys-color-state-hover-on-subtle);
-}
-
-@media (forced-colors: active) {
-  devtools-icon {
-    color: ButtonText;
-  }
-
-  .tree-outline li:hover:not(.selected) .selection {
-    forced-color-adjust: none;
-    background-color: Highlight;
-  }
-
-  .tree-outline li:hover .tree-element-title,
-  .tree-outline li.selected .tree-element-title,
-  .tree-outline li:hover .count,
-  .tree-outline li.selected .count {
-    forced-color-adjust: none;
-    color: HighlightText;
-  }
-
-  .tree-outline li:hover devtools-icon,
-  .tree-outline li.selected devtools-icon {
-    color: HighlightText !important; /* stylelint-disable-line declaration-no-important */
-  }
 }
