--- a/front_end/ui/legacy/treeoutline.css
+++ b/front_end/ui/legacy/treeoutline.css
@@ -170,7 +170,8 @@ ol.tree-outline:not(.hide-selection-when-blurred) li.selected:focus {
 /* Navigation tree variant */
 /* It does not look like the linter works with CSS nesting correctly. */
 /* stylelint-disable no-descending-specificity */
-.tree-outline.tree-variant-navigation li {
+.tree-outline.tree-variant-navigation li,
+.tree-outline.hide-selection-when-blurred.tree-variant-navigation li {
   height: var(--sys-size-10);
   margin-right: var(--sys-size-5);
   padding-right: var(--sys-size-5);
@@ -187,7 +188,8 @@ ol.tree-outline:not(.hide-selection-when-blurred) li.selected:focus {
     border-radius: 0 var(--sys-shape-corner-full) var(--sys-shape-corner-full) 0;
   }
 
-  &.selected {
+  &.selected,
+  &.selected:focus {
     color: var(--app-color-navigation-drawer-label-selected);
     background: transparent;
 
@@ -213,7 +215,7 @@ ol.tree-outline:not(.hide-selection-when-blurred) li.selected:focus {
   }
 
   & .leading-icons {
-    margin-right: var(--sys-size-2);
+    margin-right: var(--sys-size-4);
     overflow: hidden;
   }
 
