[RPP Observations] Add delay for tooltip when hovering
The tooltip will still appear instantaneously when to metric values
are focused.

Bug: 362252927
Change-Id: I2326f2943f42f280c1d9305dc7ad61f705c9ddeb
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5834061
Reviewed-by: Adriana Ixba <aixba@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>

--- a/front_end/panels/timeline/components/metricCard.css
+++ b/front_end/panels/timeline/components/metricCard.css
@@ -120,7 +120,8 @@
 }
 
 .tooltip {
-  display: none;
+  visibility: hidden;
+  transition-property: visibility;
   width: min(var(--tooltip-container-width, 350px), 350px);
   max-width: max-content;
   position: absolute;
