[RPP Observations] Add button to clear interactions log
https://screenshot.googleplex.com/334B6iR5SnjLkxK

Bug: 356356641
Change-Id: I4b4d6167f7045d1e0e35b54df96add04e70f29ef
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5831327
Reviewed-by: Adriana Ixba <aixba@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/timeline/components/liveMetricsView.css
+++ b/front_end/panels/timeline/components/liveMetricsView.css
@@ -130,6 +130,11 @@
   min-height: min-content;
 }
 
+.interactions-clear {
+  margin-left: 4px;
+  vertical-align: sub;
+}
+
 .interactions-list {
   padding: 0;
   margin: 0;
