[GM3Restyling] Update Application panel navigation tree
This makes use of the new navigation tree variant that is updated
for GM3.

Drive-by: Fixing padding for navigation trees
Before: https://i.imgur.com/fCOcgQd.png
After: https://i.imgur.com/bMVeXVT.png

Bug: 5769258
Change-Id: Ifb7818106cf0e63384d0128d4cc90a8ae8d5f01b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5829412
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Changhao Han <changhaohan@chromium.org>

--- a/front_end/panels/application/resourcesSidebar.css
+++ b/front_end/panels/application/resourcesSidebar.css
@@ -4,35 +4,32 @@
  * found in the LICENSE file.
  */
 
+/* Linter does not work with CSS nesting correctly. */
+/* stylelint-disable no-descending-specificity */
 .tree-outline {
-  padding-left: 0;
-  color: var(--sys-color-on-surface);
-}
+  li.storage-group-list-item,
+  li.storage-group-list-item:not(:has(span[is="dt-checkbox"])) {
+    padding: 0 var(--sys-size-8) 0 var(--sys-size-3);
 
-.tree-outline > ol {
-  padding-bottom: 10px;
-}
+    &::before {
+      display: none;
+    }
 
-.tree-outline li {
-  min-height: 20px;
-}
+    &:hover .selection,
+    &:active .selection::before {
+      background-color: transparent;
+    }
 
-.tree-outline li[role="heading"] {
-  color: var(--sys-color-on-surface-subtle);
-  font-weight: 500;
-}
+    & + ol {
+      padding-left: 0;
+    }
+  }
 
-li.storage-group-list-item {
-  padding: 10px 8px 6px;
+  li.storage-group-list-item:not(:first-child) {
+    margin-top: var(--sys-size-6);
+  }
 }
-
-li.storage-group-list-item:not(:first-child) {
-  border-top: 1px solid var(--sys-color-divider);
-}
-
-li.storage-group-list-item::before {
-  display: none;
-}
+/* stylelint-enable no-descending-specificity */
 
 .icons-container devtools-icon.red-icon {
   color: var(--icon-error);
