--- a/front_end/panels/settings/components/syncSection.css
+++ b/front_end/panels/settings/components/syncSection.css
@@ -33,12 +33,11 @@ legend {
 }
 
 img {
-  background-size: 32px 32px;
   border: 0;
-  border-radius: 50%;
+  border-radius: var(--sys-shape-corner-full);
   display: block;
-  height: 32px;
-  width: 32px;
+  height: var(--sys-size-9);
+  width: var(--sys-size-9);
 }
 
 .warning {
