[Freestyler] Update disclaimer UI
Bug: 364565100
Change-Id: I84c1062cf2260c34b595315e3409a27249633e8e
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5836839
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -67,10 +67,18 @@
   color: var(--sys-color-state-disabled);
 }
 
-.chat-input-disclaimer {
-  text-align: center;
-  color: var(--sys-color-on-surface-subtle);
-  margin-bottom: var(--sys-size-4);
+.disclaimer {
+  display: flex;
+  justify-content: center;
+  border-top: var(--sys-size-1) solid var(--sys-color-divider);
+
+  .disclaimer-text {
+    max-width: var(--sys-size-36);
+    color: var(--sys-color-on-surface-subtle);
+    font: var(--sys-typescale-body5-regular);
+    text-wrap: pretty;
+    padding: var(--sys-size-5);
+  }
 }
 
 .messages-scroll-container {
