[Freestyler] Redesign Steps
Update the general design for the "Thinking step" to match the new one

Bug: 358324719
Change-Id: Ifa801b260f8a13e022c1ab34e612215123214ffc
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5833852
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/freestyler/components/freestylerChatUi.css
+++ b/front_end/panels/freestyler/components/freestylerChatUi.css
@@ -133,8 +133,19 @@
 }
 
 .step {
+  width: fit-content;
+  background-color: var(--sys-color-surface3);
+  border-radius: var(--sys-size-6);
+
+  &:not(&[open]):hover {
+    background-color: var(--sys-color-state-hover-on-subtle);
+  }
+
   devtools-icon {
     vertical-align: bottom;
+  }
+
+  .indicator {
     color: var(--sys-color-green-bright);
 
     &.loading {
@@ -146,12 +157,38 @@
     }
   }
 
-  summary {
+  .summary {
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    padding: var(--sys-size-3);
     line-height: var(--sys-size-9);
+
+    .title {
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+    }
+  }
+
+  &[open] {
+    width: auto;
+
+    .summary .title {
+      white-space: normal;
+      overflow: unset;
+    }
+
+    .summary .arrow {
+      transform: rotate(180deg);
+    }
+  }
+
+  summary::marker {
+    content: "";
   }
 
   .step-details {
-    padding-left: var(--sys-size-6);
+    padding: 0 var(--sys-size-10) var(--sys-size-3);
   }
 }
 
