[Freestyler] Update the styles for inline code in MarkdownView
Fixed: 364591829
Change-Id: Ie16674092a98786eafdf3480deac3dbdfc9c9234
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5836921
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Nikolay Vitkov <nvitkov@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/ui/components/markdown_view/markdownView.css
+++ b/front_end/ui/components/markdown_view/markdownView.css
@@ -37,7 +37,9 @@
   font-size: 11px;
   user-select: text;
   cursor: text;
-  background: var(--sys-color-surface1);
+  background-color: var(--sys-color-surface4);
+  border-radius: 2px;
+  padding: 1px 3px;
 }
 
 .devtools-link {
