[RPP] Add tutorials in Annotations tab inside bar when it is empty
The text/picture is not the final version. But we can have something to see how it looks. Will update before launch.

screenshots: https://screenshot.googleplex.com/3r7LT4geDRzrJ6d

Bug: 362676898
Change-Id: I6ed8860a2a1f63ea59360d48525006f65039ee0e
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5829217
Commit-Queue: Nancy Li <nancyly@chromium.org>
Reviewed-by: Alina Varkki <alinavarkki@chromium.org>

--- a/front_end/panels/timeline/components/sidebarAnnotationsTab.css
+++ b/front_end/panels/timeline/components/sidebarAnnotationsTab.css
@@ -62,3 +62,48 @@
 .label {
   font-size: larger;
 }
+
+.annotation-tutorial-container {
+  padding: 10px;
+}
+
+.tutorial-card {
+  display: block;
+  position: relative;
+  margin: 10px 0;
+  padding: 10px;
+  border-radius: var(--sys-shape-corner-extra-small);
+  overflow: hidden;
+  border: 1px solid var(--sys-color-divider);
+  background-color: var(--sys-color-base);
+}
+
+.tutorial-image {
+  display: flex;
+  justify-content: center;
+
+  & > img {
+    max-width: 100%;
+    height: auto;
+  }
+}
+
+.tutorial-title,
+.tutorial-description,
+.tutorial-shortcut {
+  margin: 5px 0;
+}
+
+.tutorial-shortcut {
+  padding: 0.1em 0.6em;
+  border: 1px solid var(--sys-color-neutral-outline);
+  font-size: 11px;
+  background-color: var(--sys-color-neutral-container);
+  color: var(--sys-color-on-surface);
+  border-radius: 3px;
+  display: inline-block;
+  margin: 0 0.1em;
+  text-shadow: 0 1px 0 var(--sys-color-cdt-base-container);
+  line-height: 1.5;
+  white-space: nowrap;
+}
